Расширил права, фикс бага с оформлением нав бара, пофиксил подключение css

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,6 +4,11 @@
 }
 
 .course-link {
-    color: #000 !important;
+    color: #a54747;
     text-decoration: none
+}
+
+.testTEST{
+    font-size: 30px;
+    color: #a54747;
 }
